Bug 419170 ? The history includes too few days, browser.history_expire_days_min is ignored (for mak77@supereva.it, r=dietrich)